<resources>
    <string name="app_name">Nimfamoney</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or Sign Up</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Oops! Invalid Email!</string>
    <string name="error_invalid_password">Ooops! Invalid Password!</string>
    <string name="error_incorrect_password">Ooops! Invalid Password!</string>
    <string name="error_field_required">Type here!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="horosho">OKAY</string>
    <string name="ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="all_rigth">OKAY</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="get_loan">GET CRYPTOLOAN</string>
    <string name="my_portfolio">MY PORTFOLIO</string>
    <string name="exchange">EXCHANGE</string>
    <string name="ico">ICO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_summ_loan">CRYPTOLOAN AMMOUNT</string>
    <string name="action_get_loan">GET CRYPTOLOAN</string>

    <string name="credit_text"><![CDATA[To get <b>%d NIMFA</b> and start investing
        on exchanges or ICOs, transfer <b>3,3%%</b> of your cryptoloan to cryptocredit fund]]></string>
    <string name="credit_formula">3.3%% = %1$d NIMFA = $ %2$d </string>
    <string name="action_transfer_and_get_loan">TRANSFER AND GET CRYPTOLOAN</string>
    <string name="change_action_fragment_text"><![CDATA[Congratulations! Now your funds:
        <b>%d NIMFA tokens</b> are able for you to start investing!]]></string>
    <string name="buy_token_ico">BUY TOKENS ON ICO</string>
    <string name="agree_terms_of_use_nimfamoney">Check here to confirm that you have read, understand and agree to the Nimfamoney\'s Terms of Use.</string>
    <string name="begin_trade">START INVESTING</string>
    <string name="agree_with_the_waiver_of_iability">Check here to confirm that you have read, understand and agree to the Nimfamoney\'s Denial of Responsibility</string>
    <string name="dollar_s">$ %s</string>
    <string name="dollar_f">$ %.2f</string>
    <string name="action_bye">BUY NOW</string>
    <string name="bye_tokens_from_list">BUY TOKENS FROM THE LIST</string>
    <string name="bye_currency_from_list">BUYT CRYPTOCYRRENCY FROM THE LIST</string>
    <string name="details">DETAILS</string>
    <string name="help">HELP</string>
    <string name="close_position">CLOSE THE POSITION</string>
    <string name="my_portfolio_crypto">MY CRYPTOCURRENCY PORTFOLIO</string>
    <string name="cost_bag">PORTFOLIO VALUE</string>
    <string name="pay_out">TRANSFER TO YOUR WALLET</string>
    <string name="error">ERROR</string>
    <string name="invalid_apk">Invalid apk.</string>
    <string name="no_loan_error">YOU HAVE NOT RECEIVED A CRYPTOLOAN YET. LET\'S DO IT NOW!</string>
    <string name="empty_bag">YOUR CRYPTOCURRENCY PORTFOLIO IS EMPTY</string>
    <string name="error_loan">NOT ENOUGH FUNDS :(</string>
    <string name="input_amount">TYPE THE AMOUNT</string>
    <string name="sign_in_title">Sign In</string>
    <string name="your_balance">Your balance:</string>
    <string name="at_the_rate_at"><![CDATA[<b>1 NIMFA = $5</b> at the rate as of 01.09.2017]]></string>
    <string name="available_to_you_loan">Available to you loan:</string>
    <string name="enter_the_loan_amount">Enter the loan amount:</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="amount_short">Amount</string>
    <string name="value">Value</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_on_your_profit">Congratulations on your profit!</string>
    <string name="refound_of_loan">Refund of loan</string>
    <string name="cost_of_crypto_bag">The cost of your crypto-currency portfolio</string>
    <string name="comission_10">10% commission</string>
    <string name="net_profit">Net profit</string>
    <string name="close_position_and_get_profit">Close the position and get net profit</string>
    <string name="your_net_profit_on_nimfamoney">Your net income after the closure of crypto-credit on Nimfamoney is</string>
    <string name="market_cap">Market Cap</string>
    <string name="volume_24">Volume (24h)</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="max_supply">Max supply</string>
</resources>
