<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_get_loan"
            android:icon="@drawable/ic_cash_multiple"
            app:itemTextColor="@drawable/nav_view_item_textcolor"
            android:title="@string/get_loan" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_briefcase"
            android:title="@string/my_portfolio" />
        <item
            android:id="@+id/nav_exchange"
            android:icon="@mipmap/ic_currency_exchange"
            android:title="@string/exchange" />
        <item
            android:id="@+id/nav_ico"
            android:icon="@drawable/currency_btc"
            android:title="@string/ico" />
    </group>
</menu>
