<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_top_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_gradient"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin_half">

                <TextView
                    android:id="@+id/congratulate_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:gravity="center_horizontal"
                    android:text="@string/cost_of_crypto_bag"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/bag_cost_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"

                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_largest2"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/minus_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refound_of_loan"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/return_loan_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"

                        android:textColor="@color/colorDarkBlue"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comission_10"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/comission_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorDarkBlue"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/profit_img"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:src="@drawable/profit"
                android:layout_marginTop="-10dp"
                android:layout_below="@+id/minus_wrapper"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:id="@+id/profit_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profit_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net_profit"
                    android:textColor="@color/colorDarkBlue"
                    android:textSize="@dimen/text_size_large" />

                <TextView
                    android:id="@+id/profit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="$4000"
                    android:textColor="@color/colorDarkBlue"
                    android:textSize="@dimen/text_size_largest2"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/get_profit_btn"
                android:layout_alignParentBottom="true"
                style="@style/custom_button"
                android:text="@string/close_position_and_get_profit"/>

        </RelativeLayout>
    </LinearLayout>
</layout>
