<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="curr"
            type="com.nimfa.nimfaapp.dataModels.Currency" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
        android:layout_marginRight="@dimen/activity_horizontal_margin_half"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:contentPadding="@dimen/activity_horizontal_margin_half">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/curr_img_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
                android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                android:layout_toEndOf="@+id/curr_img_view"
                android:layout_toRightOf="@+id/curr_img_view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/curr_name_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{curr.name}"
                    android:textColor="@color/primaryTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin_half"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_horizontal_margin_fourth"
                            android:text="@string/price" />


                        <TextView
                            android:id="@+id/curr_cost_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
                            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                            android:text="@{String.format(@string/dollar_s,String.valueOf(curr.cost))}"
                            android:textColor="@color/colorDarkBlue"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_horizontal_margin_fourth"
                            android:text="@string/amount_short" />


                        <TextView
                            android:id="@+id/curr_amount_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
                            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                            android:text="@{String.valueOf(curr.amount)}"
                            android:textColor="@color/colorDarkBlue"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin_half"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/activity_horizontal_margin_fourth"
                            android:text="@string/value" />


                        <TextView
                            android:id="@+id/curr_summ_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"

                            android:text="@{String.format(@string/dollar_f, curr.cost * curr.amount)}"
                            android:textColor="@color/colorDarkBlue"
                            android:textSize="@dimen/text_size_medium" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>





        </RelativeLayout>

    </android.support.v7.widget.CardView>
</layout>